--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.7.1",
+    "material-datetimepicker": "^3.11.9",
     "next": "14.2.15",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.14"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
